tests/check/illegal_array_dim.co
// RUN: not choreo %s 2>&1 | FileCheck %s

__co__ auto check_arr_dim(int M) {
  int X = 2, Y = 1;

  parallel p by 4 : block {
    shared event e[X / #p][-1];
    parallel by 128 : thread {
      local u8[4, 8] smem[cdiv(X, 3)][Y-1];
      local s32[2, 64] l[2][-5];
      local s32[16] ldyn[M][2];
    }
  }
}

// CHECK: error: The array dimensions should be greater than 0, but got 0.
// CHECK: error: The array dimensions should be greater than 0, but got -1.
// CHECK: error: The array dimensions should be greater than 0, but got 0.
// CHECK: error: The array dimensions should be greater than 0, but got -5.
// CHECK: error: The array dimensions should be static (compile-time known), but got ::check_arr_dim::M.
// CHECK: Totally 5 errors have been detected.
